# palace

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  capacitor.config.ts  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: decision-memo.md  design.md  plan.md
ios-native/: project.yml
ios-native/PALACE.xcodeproj/: project.pbxproj
ios-native/PALACE/API/: APIClient.swift  MarlinClient.swift
ios-native/PALACE/App/: AppTesting.swift  MainTabView.swift  PALACEApp.swift
ios-native/PALACE/Models/: Models.swift
ios/App/App/: AppDelegate.swift  Info.plist
ios/App/App.xcodeproj/: project.pbxproj
macos/: Package.swift
macos/PALACE/: ContentView.swift  Info.plist  PALACEApp.swift
public/: disney_world_journal.html  manifest.json
scripts/: import-google-location.py  owntracks-config.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  main.rs
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
src/app/actions/: page.tsx
src/app/ask/: page.tsx
src/app/graph/: page.tsx
src/app/insights/: page.tsx
src/app/locations/: page.tsx
src/app/media/: page.tsx
src/app/memories/: page.tsx
src/app/more/: page.tsx
src/app/people/: page.tsx
src/app/search/: page.tsx
src/app/timeline/: page.tsx
src/app/vault/: page.tsx
src/hooks/: use-marlin-voice.ts  use-time-of-day.ts
src/lib/: api.ts  constants.ts  format.ts  haptics.ts  marlin.ts  native.ts  photo-manifest.ts  runtime-config.ts  tmdb-cache.ts
src/stores/: app-store.ts
src/types/: api.ts
(+77 files in other folders)
