[package]
name = "palace"
version = "0.1.0"
description = "Personal AI Life Archive & Cognitive Explorer"
authors = ["Will Sigmon"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
